<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView_contact_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/title_size"
        android:textColor="@color/colorTitle"
        android:layout_marginTop="@dimen/above_title_space"
        android:text="@string/contact_title" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_marginTop="@dimen/btwn_space"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/side_margin"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/imageButton_phone"
            android:layout_width="@dimen/width_contact_buttons"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorBackground"
            android:tint="@color/colorNotClicked"
            app:srcCompat="@drawable/ic_phone_black_24dp" />

        <TextView
            android:id="@+id/textView_phone_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/side_horiz_layout"
            android:layout_weight="1"
            android:text="@string/phoneNum_contact"
            android:textSize="@dimen/text_size"
            tools:text="@string/phoneNum_contact" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_marginTop="@dimen/btwn_space"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/side_margin"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/imageButton_email"
            android:layout_width="@dimen/width_contact_buttons"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorBackground"
            android:tint="@color/colorNotClicked"
            app:srcCompat="@drawable/ic_email_black_24dp" />

        <TextView
            android:id="@+id/textView_email_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/side_horiz_layout"
            android:layout_weight="1"
            android:text="@string/email_contact"
            android:textSize="@dimen/text_size"
            tools:text="@string/email_contact" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_marginTop="@dimen/btwn_space"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/side_margin"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/imageButton_website"
            android:layout_width="@dimen/width_contact_buttons"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorBackground"
            android:tint="@color/colorNotClicked"
            app:srcCompat="@drawable/ic_laptop_black_24dp" />

        <TextView
            android:id="@+id/textView_website_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/side_horiz_layout"
            android:layout_weight="1"
            android:text="@string/website_address"
            android:textSize="@dimen/text_size"
            tools:text="@string/website_address" />
    </LinearLayout>

</LinearLayout>